Fix:header and contents now shrink in a logical way instead of spilling out of header during flex shrink. Implemented flex-shrink arguments in header and .header1. These can be further refined later.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,79 +1,27 @@
-/*
-body {
-    background-image: url('./images/foresttreebackground.jpg');
-}
-*/
-
-/* start of code for enforcing sticky footer/grail layout and stretching content to fill page*/
-.holygrail {
-    display: flex;
-    flex-direction: column;
-    
-}
-/*sticky footer to bottom of page */
-.stretch {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
-/*formatting for footer */
-footer {
-border: 5px;
-background-color: #1F2937;
-display: flex;
-justify-content: center;
-align-items: center;
-}
-/* this removes the dots on the list items and other unwanted default traits*/
-ul {
-    
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    gap: 16px;
-    background-color: aliceblue;
-  }
-  /* this removes the line under the links */
-  .colorLinks {
-    font-size: 18px;
-    text-decoration: none;
-    color: #E5E7EB;
-  }
-
-
-/* neccesary flex box building */
-header {
-    display: flex;
-    background-color: #1F2937;
-    font-size:48px;
-    font-size: x-bold;
-    color: #F9FAF8;
-}
-.links{
-  background-color: #1F2937;
-  color: red;
-}
-
-
-
-/* ==============start nav changes 050322======= */
-
 /* navbar flexbox and controls */
 .navbox {
   background-color: #1F2937;
-Text-size: 18px;
-Font-color: #E5E7EB;
+ font-size: 18px;
+ color: #E5E7EB;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  padding: 15px;
 }
-
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  Font-color: #E5E7EB;
+  Font-size: 18px;
+  margin: auto;
+}
+/* logo controlls */
 .logo {
   color: #F9FAF8;
   font-size: 24px;
   font-weight: 900;
 }
-
+/* navbar list */
 ul {
  list-style-type: none;
  display: flex;
@@ -82,44 +30,108 @@ ul {
   gap: 16px;
 }
 
+/* this removes the line under the links */
+.colorLinks {
+  font-size: 18px;
+  text-decoration: none;
+  color: #E5E7EB;
+}
 
-.left, .right {
+/* header */
+.header {
+  background-color: #1F2937;
   display: flex;
+  flex-direction: row;
+  flex: 1;
+  justify-content: center;
   align-items: center;
-  gap: 16px;
-Font-color: #E5E7EB;
-Font-size: 18px;
+  font-size: 18px;
+  color: #E5E7EB;
+
+
+  border: red;
+  border-width: 2px;
+  border-style: dotted;
+  padding-top: 25px;
+  padding-bottom: 25px;
+
+/* ensures that header1 shrinks first */
+  flex: 1 1 0%;
 
 
 }
-/* ==============end nav changes 050322======= */
+.header1{
+/* ensures that header1 shrinks first */
+  flex: 2 1 0%;
+
+
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 500px;
+  max-height: auto;
+  background-color: #1F2937;
+
+  border: red;
+  border-width: 2px;
+  border-style: dotted;
+}
+.header1 h3 {
+font-size: 48px; }
+
+.header2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1F2937;
+  max-width: 500px;
+  max-height: inherit;
+
+  border: red;
+  border-width: 2px;
+  border-style: dotted;
 
 }
-/*contents of my first 'box' under the nav bar */
-.firstBox {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    background-color: rgb(241, 39, 238);
-    justify-content: center;
-    align-items: center;
+.header button {
+  display: flex;
+  flex-shrink: 0;
+  background-color:#3882F6;
+  color: white;
+ padding:15px;
+  border-radius: 15px;
+
+  /*
+  background: #3882F6;
+  padding: 20px;
+  width: 100px;
+  height: 25px;
+*/}
+
+
+
+
+
+
+
+/* start of code for enforcing sticky footer/grail layout and stretching content to fill page*/
+.holygrail {
+  display: flex;
+  flex-direction: column;
+
+  border: red;
+  border-width: 2px;
+  border-style: dotted;
 }
-/*places the h3 on top of the <p>*/
-.a1 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    max-width: 700px;
-    flex:1;
+/*sticky footer to bottom of page */
+.stretch {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
-/*places the image to the right of the text */
-.a2 {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 300px;
-    min-width: 300px;
-    flex:1;
-}
+
+
 /*some size rules for the moss image in firstBox, can be changed later */
 #moss {
     max-width: auto;
@@ -134,6 +146,10 @@ Font-size: 18px;
     background-color: rgb(237, 64, 235);
     justify-content: center;
     align-items: center;
+
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
 }
 /* b1 's rules make sure the images + text are given a box to live within
 that is centered and gives them spaces in between each other*/
@@ -145,10 +161,31 @@ that is centered and gives them spaces in between each other*/
     align-items: center;
     justify-content: space-evenly;
 
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
+
 }
 /* sets the maximum width of each secondBox image + its' associated text*/
 .info {
-    max-width: 200px;
+    max-width: 200;
+    max-height: auto;
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
+}
+
+img .info {
+  max-width: 200px;
+  max-height: 200px;
+}
+.surrender {
+  max-width: 204px;
+  max-height: 154px;
+}
+.text {
+  display: flex;
+  flex-wrap: wrap;
 }
 /*this box will have italicized medium text followed by
 bold small text */
@@ -160,6 +197,10 @@ bold small text */
     justify-content: center;
     align-items: center;
     gap: 15px;
+
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
     
 }
 /* text formatting*/
@@ -167,6 +208,10 @@ bold small text */
     display: flex;
     flex: wrap;
     flex-direction: row;
+
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
 }
 .c2 {
     display: flex;
@@ -176,6 +221,10 @@ bold small text */
     font-style: normal;
     flex-direction: row;
 
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
+
 }
 /*final and fourth box, aka fourthBox */
 .fourthBox {
@@ -184,6 +233,10 @@ bold small text */
     background-color: rgb(172, 115, 30);
     justify-content: center;
     align-items: center;
+
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
 }
 .d1 {
 display: flex;
@@ -191,18 +244,48 @@ flex-wrap:wrap;
 flex-direction: column;
 max-width: 700px;
 flex:1;
+
+border: red;
+  border-width: 2px;
+  border-style: dotted;
 }
 .d2 {
 display:flex;
 flex-wrap: wrap;
+
+border: red;
+  border-width: 2px;
+  border-style: dotted;
 }
 
   .secondBox {
     flex: 1;
+
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
   }
 
 /* sets max width of rock paper and scissor img*/
   .info img{
     max-width: 200px;
+
+    border: red;
+  border-width: 2px;
+  border-style: dotted;
   }
 
+
+
+  /*formatting for footer */
+footer {
+  border: 5px;
+  background-color: #1F2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: red;
+  border-width: 2px;
+  border-style: dotted;
+  }
